delete consultation handler
